grid-based layout

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -30,10 +30,12 @@
         <main class="content">
 
             <section class="hero">
-                <image srcset="assets/images/workspace-sm.jpg 480w, assets/images/workspace-md.jpg 960w, assets/images/workspace-lg.jpg 1250w" sizes="100vw" src="assets/images/workspace-sm.jpg" alt="Hero Image" class="hero-image">
+                <div class="hero-grid">
+                    <image srcset="assets/images/workspace-sm.jpg 480w, assets/images/workspace-md.jpg 960w, assets/images/workspace-lg.jpg 1250w" sizes="100vw" src="assets/images/workspace-sm.jpg" alt="Hero Image" class="hero-image">
 
-                <div class="hero-text">
-                    <p>Hi, I'm Karolin from Germany. On this page I share my latest web development projects with you. Take a look at them!</p>
+                    <div class="hero-text">
+                        <p>Hi, I'm Karolin from Germany. On this page I share my latest web development projects with you. Take a look at them!</p>
+                    </div>
                 </div>
             </section>
 
