HTML errors fixed

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <div class="header-inner">
                 <div class="header-logo">
-                    <image src="assets/images/thatsme.svg" alt="Karolin Striegel" class="header-image">
+                    <img src="assets/images/thatsme.svg" alt="Karolin Striegel" class="header-image">
                 </div>
 
                 <div class="header-text">
@@ -29,22 +29,19 @@
 
         <main class="content">
 
-            <section class="hero">
-                <div class="hero-grid">
-                    <image srcset="assets/images/workspace-sm.jpg 480w, assets/images/workspace-md.jpg 960w, assets/images/workspace-lg.jpg 1250w" sizes="100vw" src="assets/images/workspace-sm.jpg" alt="Hero Image" class="hero-image">
-
-                    <div class="hero-text">
-                        <p>Hi, I'm Karolin from Germany. On this page I share my latest web development projects with you. Take a look at them!</p>
-                    </div>
+            <div class="hero">
+                <img srcset="assets/images/workspace-sm.jpg 480w, assets/images/workspace-md.jpg 960w, assets/images/workspace-lg.jpg 1250w" sizes="100vw" src="assets/images/workspace-sm.jpg" alt="Hero Image" class="hero-image">
+                <div class="hero-text">
+                    <p>Hi, I'm Karolin from Germany. On this page I share my latest web development projects with you. Take a look at them!</p>
                 </div>
-            </section>
+            </div>
 
             <section class="featured-work">
                 <h2 class="content-header text-header">Featured Work</h2>
 
                 <div class="featured">
                     <div class="featured-item">
-                        <image src="assets/images/rumtastingnotes.svg" alt="Rum Tasting Notes" class="featured-image">
+                        <img src="assets/images/rumtastingnotes.svg" alt="Rum Tasting Notes" class="featured-image">
                         <h3 class="featured-header text-header">Rum Tasting Notes</h3>
                         <p class="featured-text">
                             <a href="http://www.rumtastingnotes.com" class="featured-link">www.rumtastingnotes.com</a>
@@ -52,7 +49,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <image src="assets/images/placeholder.jpg" alt="Placeholder Project Two" class="featured-image">
+                        <img src="assets/images/placeholder.jpg" alt="Placeholder Project Two" class="featured-image">
                         <h3 class="featured-header text-header">Project Two</h3>
                         <p class="featured-text">
                             <a href="" class="featured-link">www.placeholder.com</a>
@@ -60,7 +57,7 @@
                     </div>
 
                     <div class="featured-item">
-                        <image src="assets/images/placeholder.jpg" alt="Placeholder Project Three" class="featured-image">
+                        <img src="assets/images/placeholder.jpg" alt="Placeholder Project Three" class="featured-image">
                         <h3 class="featured-header text-header">Project Three</h3>
                         <p class="featured-text">
                             <a href="" class="featured-link">www.placeholder.com</a>
